<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2014 Microsoft Mobile and/or its subsidiary(-ies).
    See the license text file delivered with this project for more information.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/blue_background_color">

    <ImageView
        android:id="@+id/background_image"
        android:contentDescription="@string/empty_content_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_gravity="center"
        android:alpha="0.1"
        android:src="@drawable/ctf_large_icon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_general_margin"
        android:orientation="vertical" >

        <TextView 
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/about_text" />

        <TextView 
            android:id="@+id/github_url_hyperlink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="@color/light_hyperlink_color"
            android:text="@string/github_url"
            android:autoLink="web" />

    </LinearLayout>
    </ScrollView>

</RelativeLayout>
